--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,9 @@ textarea {
     border-radius: 3px;
     clear: right;
 }
+textarea:focus{
+    background-color: #e3e3e3;
+}
 
 
 #crosswordresult {
